# kp_gh

./: .cursorignore  .gitignore  README.md  architecture.md  creater_product.py  fastApiWork.py  insert_html_to_pdf.py  main.py  pyproject.toml  test.py  update_presentation.py  workBitrix.py
parser_site/: parse_page.py
